# mpc-custom-software

./: CMakeLists.txt
src/: AudioController.cpp  AudioController.h  BaseInput.cpp  BaseInput.h  BaseState.h  Button.h  ButtonRequest.h  CopyPasteSoundState.cpp  CopyPasteSoundState.h  DefaultState.cpp  DefaultState.h  DrumPad.cpp  DrumPad.h  DrumPadRequest.h  Input.cpp  Input.h  MPC.cpp  MPC.h  MPCContext.h  MPCController.cpp  MPCController.h  MPCState.cpp  MPCState.h  MidiController.cpp  MidiController.h  MidiInputSignal.h  MidiReceiver.cpp  MidiReceiver.h  MidiSender.cpp  MidiSender.h  RGB.cpp  RGB.h  Utility.h  main.cpp  old.cpp  old2.cpp
src/audio/: AudioController.cpp  AudioController.h
src/commands/: Command.h  CommandProcessor.cpp  CommandProcessor.h  CompositeCommand.h  ConfigurableCompositeCommand.h  CopyPasteSoundCommand.cpp  CopyPasteSoundCommand.h  MPCCommand.h  MakeSoundCommand.cpp  MakeSoundCommand.h  SetDrumPadRGBCommand.cpp  SetDrumPadRGBCommand.h
src/events/: EventDispatcher.cpp  EventDispatcher.h  MPCEvents.h
src/input/: BaseInput.h  Button.h  DrumPad.h  InputEvent.h  InputManager.cpp  InputManager.h
src/midi/: BaseMidi.cpp  BaseMidi.h  MidiReceiver.cpp  MidiReceiver.h  MidiSender.cpp  MidiSender.h
src/sounds/: DrumPadSound.cpp  DrumPadSound.h  Sound.h  SoundFile.cpp  SoundFile.h  SoundLibrary.cpp  SoundLibrary.h  SoundSet.cpp  SoundSet.h
src/states/: CopyPasteRGBState.cpp  CopyPasteRGBState.h  CopyPasteSoundState.cpp  CopyPasteSoundState.h  DefaultState.cpp  DefaultState.h  MPCState.cpp  MPCState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  TurnOnAllPadsState.cpp  TurnOnAllPadsState.h
src/utility/: RGB.cpp  RGB.h  Utility.h
